# cargo-github-annotation

./: Cargo.toml
src/: main.rs
